# test_site

./: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt  timeweb  timeweb.pub
somesite/: db.sqlite3  devices.csv  log.txt  manage.py  shopapp-products-fixtures.json  shopapp-products-fixtures.xml
somesite/BlogApp/: admin.py  models.py  sitemap.py  urls.py  views.py
somesite/BlogApp/migrations/: 0001_initial.py  0002_alter_article_content.py
somesite/myapiapp/: serializers.py  urls.py  views.py
somesite/myauthapp/: apps.py  form.py  models.py  tests.py  urls.py  views.py
somesite/myauthapp/migrations/: 0001_initial.py  0002_profiel_profiel_image.py  0003_remove_profiel_profiel_image_userimage.py  0004_profiel_profile_image_delete_userimage.py
somesite/requestdataapp/: apps.py  forms.py  middlwares.py  urls.py  views.py
somesite/shopapp/: admin.py  admin_mixins.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  utils.py  views.py
somesite/shopapp/fixtures/: auth_group.json  auth_gtoup.json  order_data.json  products-fixture.json  user_data.json
somesite/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discout_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_alter_product_options_alter_product_discout.py  0008_product_user.py  0009_order_receipt.py  0010_product_preview.py  0011_productimage.py  0012_alter_order_options_alter_product_options_and_more.py
somesite/somesite/: asgi.py  settings.py  sitemaps.py  urls.py  wsgi.py
(+40 files in other folders)
