[tool.poetry]
name = "python-django"
version = "0.1.0"
description = ""
authors = ["verghil <verghil@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.3"
django-debug-toolbar = "^4.2.0"
django-filter = "^23.4"
djangorestframework = "^3.14.0"
pillow = "^10.1.0"
pytz = "^2023.3.post1"
sqlparse = "^0.4.4"
sentry-sdk = "^1.38.0"
gunicorn = "^21.2.0"
drf-spectacular = "^0.26.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
